fixed page heading display on mobile

--- a/_responsive.sass
+++ b/_responsive.sass
@@ -27,6 +27,11 @@
         &__wide
             grid-column: span 3
 
+    .page-heading
+        &__subtitle
+            margin-top: 0
+            margin-left: 60px
+
     .footer
         text-align: left
 
