--- a/style.sass
+++ b/style.sass
@@ -322,7 +322,7 @@ header
         font-size: 26px
         font-weight: normal
         margin-bottom: 0
-        margin-left: 60px
+        margin-top: 10px
 
 .side-borders
     border-left: 3px solid $color-secondary
